--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<head><title>Page Title</title></head>
+<head><title>Jeremy's Portfolio</title></head>
 
 <body>
     <h1>Jeremy's Developer Portfolio</h1>
