--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <div>This is the body....</div>
 
+    <div>
+        <h3>Contact Me</h3>
+
+        <a href="emailto:jeremyguyton85@gmail.com">Contact Me</a>
+    </div>
 </body>
 
 </html>
