--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div>
         <h3>Contact Me</h3>
 
-        <a href="emailto:jeremyguyton85@gmail.com">Contact Me</a>
+        <a href="emailto:jeremyguyton85@gmail.com">Email Me</a>
+        <a href="tel:+16198381531">Call Me</a>
     </div>
 
 </body>
