--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <head><title>Jeremy's Portfolio</title></head>
 
+<style>
+    .footer {
+        background-color: darkgrey;
+        bottom: 0;
+        position: fixed;
+        width: 100vw;
+    }
+</style>
+
 <body>
     <h1>Jeremy's Developer Portfolio</h1>
 
@@ -12,6 +21,10 @@
 
         <a href="emailto:jeremyguyton85@gmail.com">Contact Me</a>
     </div>
+
+<footer class="footer">
+    <span>This is the footer section</span>
+</footer>
 </body>
 
 </html>
