fixed email me bug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div>
         <h3>Contact Me</h3>
 
-        <a href="emailto:jeremyguyton85@gmail.com">Email Me</a>
+        <a href="mailto:jeremyguyton85@gmail.com">Email Me</a>
         <a href="tel:+16198381531">Call Me</a>
     </div>
 
